<?xml version="1.0"?>
<!--

  Copyright (c) 2020, 2024 Oracle and/or its affiliates. All rights reserved.
  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.

  This code is free software; you can redistribute it and/or modify it
  under the terms of the GNU General Public License version 2 only, as
  published by the Free Software Foundation.  Oracle designates this
  particular file as subject to the "Classpath" exception as provided
  by Oracle in the LICENSE file that accompanied this code.

  This code is distributed in the hope that it will be useful, but WITHOUT
  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
  version 2 for more details (a copy is included in the LICENSE file that
  accompanied this code).

  You should have received a copy of the GNU General Public License version
  2 along with this work; if not, write to the Free Software Foundation,
  Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.

  Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
  or visit www.oracle.com if you need additional information or have any
  questions.

-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.oracle.coherence.plugin.visualvm</groupId>
  <artifactId>coherence-visualvm-main</artifactId>
  <packaging>pom</packaging>
  <version>1.7.1-SNAPSHOT</version>
  <name>Coherence VisualVM Plugin Parent</name>

  <description>
    Developer JVisualVM Plugin to provide a summarized view of Coherence
    Cluster runtime JMX statistics.
  </description>

  <url>https://coherence.community/</url>

  <modules>
    <module>coherence-visualvm-plugin</module>
    <module>coherence-visualvm-tests</module>
  </modules>

  <properties>
    <com.sun.xml.bind.version>2.3.0</com.sun.xml.bind.version>

    <!-- default coherence versions -->
    <default.coherence.ce.version>22.06.7</default.coherence.ce.version>
    <default.coherence.commercial.version>14.1.2-0-0-SNAPSHOT
    </default.coherence.commercial.version>

    <failsafe.argLine>-Xmx1g -XX:+HeapDumpOnOutOfMemoryError
      -XX:HeapDumpPath=${project.build.directory} -XX:+ExitOnOutOfMemoryError
      -Dfile.encoding=UTF-8 --illegal-access=permit
      --add-opens=java.base/java.net=ALL-UNNAMED
    </failsafe.argLine>
    <groovy.version>3.0.12</groovy.version>
    <jackson.version>2.13.5</jackson.version>
    <jackson.databind.version>${jackson.version}</jackson.databind.version>
    <java.version>1.8</java.version>
    <java.version.eight>1.8</java.version.eight>
    <java.version.release>8</java.version.release>
    <javax.activation.version>1.2.0</javax.activation.version>
    <junit.version>4.13.1</junit.version>
    <visualvm.version>2.1</visualvm.version>
    <netbeans.version>RELEASE124</netbeans.version>

    <hamcrest.version>2.2</hamcrest.version>
    <maven.version>3.6.0</maven.version>

    <oracle.bedrock.version>6.0.0</oracle.bedrock.version>

    <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
    <maven.bundle.plugin.version>4.2.1</maven.bundle.plugin.version>

    <maven.directory.plugin.version>0.1</maven.directory.plugin.version>
    <maven.exec.plugin.version>1.4.0</maven.exec.plugin.version>
    <maven.failsafe.plugin.version>3.0.0-M5</maven.failsafe.plugin.version>
    <maven.enforcer.plugin.version>3.0.0-M3</maven.enforcer.plugin.version>
    <maven.flatten.plugin.version>1.2.2</maven.flatten.plugin.version>
    <maven.gmaven.plugin.version>1.13.1</maven.gmaven.plugin.version>
    <maven.install.plugin.version>2.5.1</maven.install.plugin.version>
    <maven.jar.plugin.version>3.2.0</maven.jar.plugin.version>
    <maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
    <maven.nbm.plugin.version>2.6.2</maven.nbm.plugin.version>
    <maven.replacer.plugin.version>1.5.2</maven.replacer.plugin.version>
    <maven.resources.plugin.version>2.7</maven.resources.plugin.version>
    <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>

    <copyright.exclude.files>${top.parent.basedir}/etc/copyright-exclude.txt</copyright.exclude.files>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- VisualVM -->
      <dependency>
        <groupId>org.graalvm.visualvm.modules</groupId>
        <artifactId>org-graalvm-visualvm-uisupport</artifactId>
        <version>${visualvm.version}</version>
      </dependency>
      <dependency>
        <groupId>org.graalvm.visualvm.api</groupId>
        <artifactId>org-graalvm-visualvm-application</artifactId>
        <version>${visualvm.version}</version>
      </dependency>
      <dependency>
        <groupId>org.graalvm.visualvm.api</groupId>
        <artifactId>org-graalvm-visualvm-application-views</artifactId>
        <version>${visualvm.version}</version>
      </dependency>
      <dependency>
        <groupId>org.graalvm.visualvm.api</groupId>
        <artifactId>org-graalvm-visualvm-charts</artifactId>
        <version>${visualvm.version}</version>
      </dependency>
      <dependency>
        <groupId>org.graalvm.visualvm.api</groupId>
        <artifactId>org-graalvm-visualvm-core</artifactId>
        <version>${visualvm.version}</version>
      </dependency>
      <dependency>
        <groupId>org.graalvm.visualvm.api</groupId>
        <artifactId>org-graalvm-visualvm-tools</artifactId>
        <version>${visualvm.version}</version>
      </dependency>
      <dependency>
        <groupId>org.graalvm.visualvm.api</groupId>
        <artifactId>org-graalvm-visualvm-host</artifactId>
        <version>${visualvm.version}</version>
      </dependency>
      
      <!-- tracer dependency -->
      <dependency>
        <groupId>org.graalvm.visualvm.modules</groupId>
        <artifactId>org-graalvm-visualvm-modules-tracer</artifactId>
        <version>${visualvm.version}</version>
      </dependency>

      <dependency>
        <groupId>org.netbeans.api</groupId>
        <artifactId>org-openide-modules</artifactId>
        <version>${netbeans.version}</version>
      </dependency>
      <dependency>
        <groupId>org.netbeans.api</groupId>
        <artifactId>org-openide-awt</artifactId>
        <version>${netbeans.version}</version>
      </dependency>
      <dependency>
        <groupId>org.netbeans.api</groupId>
        <artifactId>org-openide-util</artifactId>
        <version>${netbeans.version}</version>
      </dependency>
      <dependency>
        <groupId>org.netbeans.api</groupId>
        <artifactId>org-openide-dialogs</artifactId>
        <version>${netbeans.version}</version>
      </dependency>
      <dependency>
        <groupId>org.netbeans.api</groupId>
        <artifactId>org-openide-windows</artifactId>
        <version>${netbeans.version}</version>
      </dependency>
      <dependency>
        <groupId>org.netbeans.api</groupId>
        <artifactId>org-netbeans-modules-options-api</artifactId>
        <version>${netbeans.version}</version>
      </dependency>
      <dependency>
        <groupId>org.graalvm.visualvm.modules</groupId>
        <artifactId>org-graalvm-visualvm-lib-ui</artifactId>
        <version>${visualvm.version}</version>
      </dependency>

      <!-- jackson -->
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-annotations</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.databind.version}</version>
        <!-- exclude conflicting dependency on older version of jackson
             than ${jackson.version} -->
        <exclusions>
          <exclusion>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <!-- Coherence discovery class -->
      <dependency>
        <groupId>com.oracle.coherence.ce</groupId>
        <artifactId>coherence-discovery</artifactId>
        <version>${default.coherence.ce.version}</version>
      </dependency>

      <dependency>
        <groupId>org.hamcrest</groupId>
        <artifactId>hamcrest</artifactId>
        <version>${hamcrest.version}</version>
        <scope>test</scope>
      </dependency>

      <!-- JUnit 4 -->
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <!-- maven-enforcer-plugin -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>${maven.enforcer.plugin.version}</version>
          <executions>
            <execution>
              <id>enforce</id>
              <phase>validate</phase>
              <goals>
                <goal>enforce</goal>
              </goals>
              <configuration>
                <rules>
                  <requireMavenVersion>
                    <version>[${maven.version},)</version>
                  </requireMavenVersion>
                  <requireJavaVersion>
                    <version>${java.version}</version>
                  </requireJavaVersion>
                </rules>
              </configuration>
            </execution>
          </executions>
        </plugin>

        <!-- maven-compiler-plugin -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.plugin.version}</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <release>${java.version.release}</release>
          </configuration>
        </plugin>

        <!-- maven-replacer-plugin -->
        <plugin>
          <groupId>com.google.code.maven-replacer-plugin</groupId>
          <artifactId>replacer</artifactId>
          <version>${maven.replacer.plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>flatten-maven-plugin</artifactId>
          <version>${maven.flatten.plugin.version}</version>
        </plugin>

        <!-- nbm-maven-plugin -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>nbm-maven-plugin</artifactId>
          <version>${maven.nbm.plugin.version}</version>
        </plugin>

        <!-- maven-jar-plugin -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven.jar.plugin.version}</version>
          <configuration>
            <archive>
              <addMavenDescriptor>false</addMavenDescriptor>
              <!--  TODO: The following should be resolved!  We shouldn't force every project to define a MANIFEST.MF
              <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
              -->
            </archive>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.commonjava.maven.plugins</groupId>
        <artifactId>directory-maven-plugin</artifactId>
        <version>${maven.directory.plugin.version}</version>
        <executions>
          <execution>
            <id>generate-top-parent-basedir</id>
            <goals>
              <goal>highest-basedir</goal>
            </goals>
            <phase>validate</phase>
            <configuration>
              <property>top.parent.basedir</property>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>copyright</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>${maven.exec.plugin.version}</version>
            <!-- inherited = false - we do not want/need this copyright check to execute in sub-modules -->
            <inherited>false</inherited>
            <executions>
              <execution>
                <id>copyright-check</id>
                <goals>
                  <goal>java</goal>
                </goals>
                <phase>validate</phase>
                <configuration>
                  <mainClass>org.glassfish.copyright.Copyright</mainClass>
                  <additionalClasspathElements>
                    ${top.parent.basedir}/tools/copyright/glassfish-copyright-maven-plugin-2.4-SNAPSHOT.jar
                  </additionalClasspathElements>
                  <addOutputToClasspath>false</addOutputToClasspath>
                  <addResourcesToClasspath>false</addResourcesToClasspath>
                  <arguments>
                    <argument>-c</argument>
                    <argument>-X</argument>
                    <argument>@${copyright.exclude.files}</argument>
                    <argument>-C</argument>
                    <argument>${top.parent.basedir}/etc/header.txt</argument>
                    <argument>-A</argument>
                    <argument>${top.parent.basedir}/etc/header-2.txt</argument>
                  </arguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <repositories>
    <repository>
      <id>ossrh-staging</id>
      <name>OSS Sonatype Staging</name>
      <url>https://oss.sonatype.org/content/groups/staging/</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </repository>

    <repository>
      <id>snapshots-repo</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>
</project>
